# nms_var

./: CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
src/: nms.cpp  nms_kernel.cu
src/cpu/: nms_kernel.cpp
src/cuda/: nms_var_kernel.cu
src/nms_var/: __init__.py
src/nms_variance/: __init__.py
src/nms_with_variance/: __init__.py
test/: test_nms.py  verify_against_edgardo.py
test/dets/: boxes.npy  scores.npy
test/nms_cuda_12_arrays/: i.npy
test/nms_test_arrays/: i.npy
test_data/: boxes.npy  classes.npy  scores.npy  test.py  vars_xi.npy
test_data/nms_arrays/: vars_xi.npy
test_data/nms_dummy_new/: boxes.npy  scores.npy  vars_xi.npy
